@@ -8,6 +8,7 @@ exempt of errors.
 
 - Alex (afaucher)
 - Andre Sodermans (wienerschnitzel)
+- Apostolos Syropoulos
 - Arno Willig
 - Bob Ciora
 - Chaos
